syntax = "proto3";

option java_multiple_files = true;
option java_package = "grpc.chat";


message LoginRequest {
    string userName = 1;
    string password = 2;
}

message LoginResponse {
    string status = 1;
    string token = 2;
}



message SendMessageRequest {
    Message message = 1;
    string receiverUserName = 2;
}


message SendMessageResponse {
    string status = 1;
}

message Message {
    string senderUserName = 1;
    string messageText = 2;
}

message ReceiveMessageRequest {
    string receiverUserName = 1;
}

message Request {
    string requestType = 1;
    string from = 2;
    string to = 3;
    string userName = 4;
    string password = 5;
    string message = 6;
    string token = 7;
}

message Response {
    string messageSender = 1;
    string message = 2;
    string sendingStatus = 3;
    string loginStatus = 4;
    string responseType = 5;
    string token = 6;
}

service ChatServer {
    rpc Chatting(stream Request) returns (stream Response);
}